# gdpr-officer

./: .gitignore  LICENSE  README.md  pyproject.toml
examples/: demo.py  local_test.py
gdpr_officer/: __init__.py  api.py  cli.py  config.py  encryptor.py  key_backend.py  migrate.py
gdpr_officer/backends/: __init__.py  gcp_firestore.py  local.py
tests/: test_core.py
